[gd_scene load_steps=6 format=3 uid="uid://ccpe61iq4yldp"]

[ext_resource type="Texture2D" uid="uid://bnjnmrn4swjda" path="res://Sprites/rosa_looking.png" id="1_jcge5"]
[ext_resource type="Script" uid="uid://b3p8cfk3vw7g0" path="res://Scripts/main_menu.gd" id="2_1ehe0"]
[ext_resource type="PackedScene" uid="uid://4vjk881onlb1" path="res://Scenes/Menu/choose_level.tscn" id="3_n45e2"]
[ext_resource type="PackedScene" uid="uid://dqs2syn58gexv" path="res://Scenes/LevelEditor/level_editor.tscn" id="4_pn3xf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kr3tp"]
bg_color = Color(0.427493, 0.427493, 0.427493, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="MainMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jcge5")
expand_mode = 2
script = ExtResource("2_1ehe0")
NEW_GAME_SCENE = ExtResource("3_n45e2")
EDITOR_SCENE = ExtResource("4_pn3xf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_right = 4.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="NewGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kr3tp")
text = "New Game"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kr3tp")
text = "Settings"

[node name="Editor" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kr3tp")
text = "     Level Editor     "

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kr3tp")
text = "Quit"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Editor" to="." method="_on_editor_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Quit" to="." method="_on_quit_pressed"]
